app/assets/_scss/layouts/_page.scss
// Global Page Setting
// **************

.home_intro {
    h1 {
        @include h1();
    }

    h2{
        @include h2();
    }
}

// Homepage
// **************

.homepage {

    p.bio {
        @include paragraph_text($tablet, to-max, 18px);
    }

    a {
        padding: 0 0.5rem;
    }
}

// End of Homepage


// Project Layout
// **************
.project_intro {
    @include flexbox();
    background-image: url('/assets/images/grid-paper-bg.jpg');
    height: 400px;
    width: 100%;
    max-width: 1030px;
    margin: auto;

    h1.collection--title {
        @include h1();
        margin: auto;
        line-height: 400px;

    }
}

.project-content {
    margin: calc(2.3em * 2) auto;
    
}

.projects {

    h2 {
        @include project-h2();
    }

    .grid-lg .project__container {
        @supports (display: grid) {
            display: grid;
            grid-template-columns: 1fr;
            grid-gap: 0 1rem;

            @media screen and (min-width: $tablet) {
                grid-template-columns: 1fr 1fr;
            }
        }

        @supports not (display: grid) {
            @include flexbox();
            @include flex-wrap(wrap);
        }

        display: flex;

        .projects__project {
            @supports not (display: grid) {
                @include flex(2 1 45%);
                margin: 0 2.5%;
            }

            @media screen and (min-width: $desktop){
                &:nth-child(3n) {
                    @supports (display: grid) {
                        grid-column: 1/-1;
                    }
                }
            }
            margin-bottom: 2.3em;


            .projects__link {
                .projects__img {
                    margin: 0;
                    padding: 0;
                    
                    .featured_img {
                        width: 100%;
                        margin: 0;
                        padding: 0;
                    }
                }

                &:hover {
                    div > * {
                        color: $hover-grey;
                    }
                }
            }

            div {
                p {
                    @include body_text($lato, $fw--1, 25px, $light-grey);
                }
            }
        }
    }


}

// End of Project Layout

// Contact Template
// *********************

.contact--template {

    h2 {
        @include body_text($abril, 700, 32px, $grey);
    }


    p, ul li {
        @include paragraph_text($tablet, to-max, 25px);
    }

    p {
        margin: 0;
    }

    ul {
        list-style-type: none;
        padding: 0;

        li {
            margin: .2rem 0;
        }
    }

    a {
        padding: 0 0.5rem;
        color: $grey;
        font-weight: $fw--2;

        &:hover {
            color: $hover-grey;
        }
    }
   
    .contact_services {

        h2 {
            @media (max-width: $tablet) {
                text-align: center;
            }
        }

        ul {
            @include flexbox();
            @include flex-direction(column);
            @include justify-content(space-between);
            @include align-content(center);

            @include if-min-width($tablet) {
                @include flex-direction(row);
            }

            li {
                @include flexbox();
                @include if-min-width($desktop){
                    border: 2px solid $hover-grey;
                    width: 220px;
                    height: 220px;
                }
                text-align: center;

                span {
                    margin: auto;
                }
            }
        }
    }

    .contact-quote {
                
        @include flexbox();
        @include if-min-width($desktop) {
            width: 60%;
            margin: $section-margin;
        }

        position: relative;
        height: 200px;
        

        &::before, &::after {
            content: "\201C";
            display: block;
            position: absolute;
            font-size: 60px;
            font-weight: bold;
        }
        
        &::before {
            top: 0;
            left: 0;
        }

        &::after {
            right: 0;
            bottom: -50px;
        }

        h3 {
            @include body_text($abril, $fw--3, 32px, $grey);
            text-align: center;
            margin: auto;

            @include if-min-width($tablet) {
                width: 60%;
            }
        }
    }
}

